[gd_scene load_steps=8 format=3 uid="uid://41uljc4y6ch0"]

[ext_resource type="Script" path="res://src/timeline/Timeline.gd" id="1_tp4lt"]
[ext_resource type="PackedScene" uid="uid://fdwyax12qpdr" path="res://src/timeline/timeline_funcbar.tscn" id="2_83br0"]
[ext_resource type="PackedScene" uid="uid://45x12j7e2oja" path="res://src/timeline/layer_tree.tscn" id="22_6i23w"]
[ext_resource type="Shader" path="res://src/shaders/TransparentChecker.gdshader" id="28_gng67"]
[ext_resource type="Script" path="res://src/timeline/FrameBtn.gd" id="29_pjpv8"]
[ext_resource type="Script" path="res://src/timeline/CelBtn.gd" id="30_1wni3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_62d7w"]
shader = ExtResource("28_gng67")
shader_parameter/size = 10.0
shader_parameter/alpha = 1.0
shader_parameter/color1 = Color(0.7, 0.7, 0.7, 1)
shader_parameter/color2 = Color(1, 1, 1, 1)
shader_parameter/offset = Vector2(0, 0)
shader_parameter/scale = Vector2(0, 0)
shader_parameter/rect_size = Vector2(0, 0)
shader_parameter/follow_movement = false
shader_parameter/follow_scale = false

[node name="Timeline" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tp4lt")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TimelineFuncbar" parent="Panel" instance=ExtResource("2_83br0")]
layout_mode = 0
anchors_preset = 0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="layers" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="split" type="HSplitContainer" parent="ScrollContainer/layers"]
layout_mode = 2
size_flags_vertical = 3

[node name="LayerTree" parent="ScrollContainer/layers/split" instance=ExtResource("22_6i23w")]
unique_name_in_owner = true
layout_mode = 2

[node name="contents" type="VBoxContainer" parent="ScrollContainer/layers/split"]
layout_mode = 2

[node name="frames" type="HBoxContainer" parent="ScrollContainer/layers/split/contents"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="FrameBtn" type="Button" parent="ScrollContainer/layers/split/contents/frames"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
theme_type_variation = &"framebtn"
text = "1"
script = ExtResource("29_pjpv8")

[node name="cels" type="HBoxContainer" parent="ScrollContainer/layers/split/contents"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2

[node name="CelBtn" type="TextureButton" parent="ScrollContainer/layers/split/contents/cels"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(36, 30)
layout_mode = 2
theme_type_variation = &"framebtn"
script = ExtResource("30_1wni3")

[node name="ColorRect" type="ColorRect" parent="ScrollContainer/layers/split/contents/cels/CelBtn"]
material = SubResource("ShaderMaterial_62d7w")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
